added some features

--- a/friends/friendship/templates/friendship/base.html
+++ b/friends/friendship/templates/friendship/base.html
@@ -12,11 +12,14 @@
       <nav>
         <ul>
           <li><a href="/friendship">Главная</a></li>
+          <li><a href="/friendship/register">Зарегистрироваться</a></li>
           <li><a href="/friendship/create-request">Создать запрос</a></li>
+          <li><a href="/friendship/open_status_field">Посмотерть статус дружбы</a></li>
           <li><a href="/friendship/outbox">Исходящие запросы</a></li>
           <li><a href="/friendship/inbox">Входящие запросы</a></li>
+          <li><a href="/friendship/friends">Список друзей</a></li>
           <li><a href="/friendship/login">Войти</a></li>
-          <li><a href="/friendship/register">Зарегистрироваться</a></li>
+          <li><a href="/friendship/logout/?next=/friendship/login">Выйти</a></li>
         </ul>
       </nav>
     </header>
